# meguca

./: Cargo.toml
websockets2/: Cargo.toml
websockets2/src/: client.rs  config.rs  main.rs  message.rs  registry.rs  util.rs
websockets2/src/body/: code.rs  mod.rs  urls.rs
websockets2/src/db/: mod.rs  posts.rs  threads.rs
websockets2/src/feeds/: index.rs  mod.rs  threads.rs
